<resources>
    <string name="app_name">Loop</string>

    <!--    For Package Logo-->
    <string name="PackageName">From \n A5 Universe</string>


    <!--    navigation drawer item-->
    <string name="chat">Chat</string>
    <string name="groups">Groups</string>
    <string name="meet">Meet</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="viewProfile">View Profile</string>
    <string name="myProfile">My Profile</string>

    <!--    meeting -->
    <string name="meeting">Meeting</string>
    <string name="meetingDescription">Create Room Name and share the code with your \n friends to start video call or enter the code of the \n room you want to join </string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="share">Share</string>
    <!--    test.   -->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!--    Login and signup    -->
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="name">User Name</string>
    <string name="password">Password</string>
    <string name="save">Save</string>

    <!--    dialogue string     -->
    <string name="dialogue_text">Are you sure \n you want to Logout ?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_new_account">Create New account. </string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E mail</string>
    <string name="user_name">User Name</string>
    <string name="home">Home</string>
    <string name="connect">Connect</string>
    <string name="news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_details">More Details</string>
    <string name="content">Content</string>
    <string name="sub_description">Sub Description</string>
    <string name="title">Title</string>
    <string name="new_heading">New Heading</string>
    <string name="sub_heading">Sub Heading</string>
    <string name="category">Category</string>
    <string name="last_message">Last Message</string>
    <string name="group_name">Group Name</string>
    <string name="group_info">tap here for group info</string>
    <string name="write_messages">Write Messages...</string>
    <string name="update">Update</string>

</resources>