<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat"
            android:title="@string/chat"/>

        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/group"
            android:title="@string/connect"/>

        <item
            android:id="@+id/nav_meet"
            android:icon="@drawable/meet"
            android:title="@string/meet"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/news"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>


    </group>

</menu>