<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/idIVNews"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_180sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:importantForAccessibility="no"
                android:padding="@dimen/_3sdp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/idTVTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idIVNews"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_4sdp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idTVSubDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVTitle"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:padding="@dimen/_4sdp"
                android:text="@string/sub_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/idTVContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVSubDesc"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:padding="@dimen/_4sdp"
                android:text="@string/content"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white" />
        </RelativeLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_details"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/btn_login_shape"
        android:textAllCaps="false"
        android:id="@+id/idBtnReadNews"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
