<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MeetingActivity"
    android:background="@color/light_purple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/toolBar"
        android:background="@drawable/top_bar_shape">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/sample_image"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp" />

        <TextView
            android:id="@+id/receiverName"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/sansation_bold"
            android:gravity="center"
            android:text="@string/meeting"
            android:textColor="@color/icon_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_380sdp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/page_shape"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/meetingDescription"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/roomCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/edit_text_shape"
            android:hint="Room Name"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp"
            android:textAlignment="center"
            android:textColor="@color/icon_color"
            android:textColorHint="@color/icon_color"
            android:gravity="center_horizontal" />


        <Button
            android:id="@+id/btnJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/btn_login_shape"
            android:gravity="center"
            android:text="@string/join"
            android:textColor="@color/icon_color"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/btn_login_shape"
            android:gravity="center"
            android:text="@string/share"
            android:textColor="@color/icon_color"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:layout_marginBottom="@dimen/_15sdp"
android:layout_alignParentBottom="true"
android:background="@android:color/transparent">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/PackageName"
    android:textStyle="bold"
    android:fontFamily="@font/sansation_bold"
    android:textSize="@dimen/_17ssp"
    android:textColor="@color/icon_color"
    android:gravity="center"
    />


</LinearLayout>

</RelativeLayout>